syntax = "proto3";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc RegisterUser(UserRegistrationRequest) returns (UserRegistrationResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

enum Role {
  USER = 0;
  // Define other roles here if needed
}

message UserRegistrationRequest {
  string firstName = 1;
  string lastName = 2;
  string title = 3;
  string email = 4;
  string phone = 5;
  Role role = 6;
  string profilePicture = 7;
  string password = 8;
  string dateOfBirth = 9;
  string address = 10;
  string nationality = 11;
  string username = 12;
  string gender = 13;
  repeated string knownIps = 14;
  string flaggedIp = 15;
  google.protobuf.Timestamp createdAt = 16;
  google.protobuf.Timestamp updatedAt = 17;
}

message UserRegistrationResponse {
	UserRegistrationRequest data = 1;
}

message LoginRequest {
	string email = 1;
	string phone = 2;
	string password = 3;
}

message LoginResponse {
	UserRegistrationRequest data = 1;
	string AccessToken = 2;
}



